# Boat

./: .$救生船分线板线路图.drawio.bkp  README.md  救生船分线板线路图.drawio
Core/Inc/: main.h
Core/Src/: bsp.c  bsp.h  main.c  main.h  stm32f4xx_it.c  usart.c
KeyBoardControl/: KeyBoard.c  main.c  readme.md  serial.c
KeyBoard_0.2-rukou/: KeyBoard.c  KeyBoard.h  main.c  makefile  serial.c  serial.h
MDK-ARM/: boat.uvguix.Billy  boat.uvguix.discipline  boat.uvoptx
MDK-ARM/RTE/_boat/: RTE_Components.h
MDK-ARM/boat/: boat.axf  boat.build_log.htm  boat.hex  boat.htm  boat.lnp  boat.map  boat_boat.dep  bsp.d  dma.d  gpio.d  main.d  stm32f4xx_hal.d  stm32f4xx_hal_dma.d  stm32f4xx_hal_dma_ex.d  stm32f4xx_hal_exti.d  stm32f4xx_hal_msp.d  stm32f4xx_hal_pwr.d  stm32f4xx_hal_pwr_ex.d  stm32f4xx_hal_rcc.d  stm32f4xx_hal_tim_ex.d  stm32f4xx_it.d  system_stm32f4xx.d  tim.d  usart.d
boat/: boat.ioc
boat/Core/Src/: bsp.h  gpio.c  main.c  stm32f4xx_it.c  tim.c
boat/MDK-ARM/: .clangd  boat+boat.cbuild.yml  boat+boat.cprj  boat.cbuild-idx.yml  boat.cproject.yaml  boat.csolution.yaml  boat.uvguix.Probability  boat.uvguix.discipline  boat.uvoptx  boat.uvprojx
boat/MDK-ARM/boat/: boat.axf  boat.build_log.htm  boat.hex  boat.htm  boat.map  boat_boat.dep  gpio.d  main.d  stm32f4xx_hal_cortex.d  stm32f4xx_hal_flash.d  stm32f4xx_hal_flash_ex.d  stm32f4xx_hal_flash_ramfunc.d  stm32f4xx_hal_gpio.d  stm32f4xx_hal_rcc_ex.d  stm32f4xx_hal_tim.d  stm32f4xx_hal_uart.d  stm32f4xx_it.d  usart.d
boat/MDK-ARM/tmp/boat/boat/: .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake
